--- a/platformio.ini
+++ b/platformio.ini
@@ -12,5 +12,9 @@
 platform = atmelavr
 board = uno
 framework = arduino
-lib_deps = fastled/FastLED@^3.9.4
-monitor_speed = 115200 
+lib_deps = 
+	fastled/FastLED@^3.9.4
+	nkaaf/List@^3.0.1
+monitor_speed = 115200
+build_unflags = -std=gnu++11
+build_flags = -std=gnu++17
