--- a/platformio.ini
+++ b/platformio.ini
@@ -15,6 +15,7 @@ framework = arduino
 lib_deps = 
 	fastled/FastLED@^3.9.4
 	nkaaf/List@^3.0.1
+	arduino-libraries/Servo@^1.2.2
 monitor_speed = 115200
 build_unflags = -std=gnu++11
 build_flags = -std=gnu++17
