--- a/platformio.ini
+++ b/platformio.ini
@@ -8,14 +8,12 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:uno]
-platform = atmelavr
-board = uno
+[env:esp32dev]
+platform = espressif32
+board = esp32dev
 framework = arduino
 lib_deps = 
 	fastled/FastLED@^3.9.4
 	nkaaf/List@^3.0.1
-	arduino-libraries/Servo@^1.2.2
+	madhephaestus/ESP32Servo@^3.0.6
 monitor_speed = 115200
-build_unflags = -std=gnu++11
-build_flags = -std=gnu++17
